--- a/LOOPUIUX/app/src/main/res/values/themes.xml
+++ b/LOOPUIUX/app/src/main/res/values/themes.xml
@@ -2,15 +2,24 @@
   <!-- Base application theme. -->
   <style name="Theme.LOOPUIUX" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
     <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/purple_500</item>
-    <item name="colorPrimaryVariant">@color/purple_700</item>
+    <item name="colorPrimary">@color/red_500</item>
+    <item name="colorPrimaryVariant">@color/red_700</item>
     <item name="colorOnPrimary">@color/white</item>
     <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/teal_200</item>
-    <item name="colorSecondaryVariant">@color/teal_700</item>
+    <item name="colorSecondary">@color/dark_gray</item>
+    <item name="colorSecondaryVariant">#97ABB3</item>
     <item name="colorOnSecondary">@color/black</item>
     <!-- Status bar color. -->
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
   </style>
+
+  <style name="Theme.LOOPUIUX.NoActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+  </style>
+
+  <style name="Theme.LOOPUIUX.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+  <style name="Theme.LOOPUIUX.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
