--- a/LOOPUIUX/app/src/main/res/layout/nav_drawer.xml
+++ b/LOOPUIUX/app/src/main/res/layout/nav_drawer.xml
@@ -23,7 +23,7 @@
         android:padding="16dp">
 
       <ImageView
-          android:id="@+id/imageView"
+          android:id="@+id/imageViewContent"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
