Added newEntry form

--- a/LOOPUIUX/app/src/main/res/layout/fragment_home.xml
+++ b/LOOPUIUX/app/src/main/res/layout/fragment_home.xml
@@ -19,4 +19,11 @@
       app:layout_constraintTop_toTopOf="parent"
       tools:listitem="@layout/list_item" />
 
+  <pt.rfernandes.loopuiux.ui.home.new_post.NewPostMotionLayout
+      android:id="@+id/add_entry_motion_layout"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:visibility="visible"
+      app:layoutDescription="@xml/scene_filter" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
