--- a/LOOPUIUX/app/src/main/res/values/dimens.xml
+++ b/LOOPUIUX/app/src/main/res/values/dimens.xml
@@ -4,7 +4,6 @@
   <dimen name="activity_vertical_margin">16dp</dimen>
   <dimen name="nav_header_vertical_spacing">8dp</dimen>
   <dimen name="nav_header_height">176dp</dimen>
-  <dimen name="fab_margin">16dp</dimen>
 
   <dimen name="pageMargin">10dp</dimen>
   <dimen name="pagerOffset">10dp</dimen>
@@ -12,5 +11,25 @@
 
   <dimen name="list_item_horizontal_padding">16dp</dimen>
   <dimen name="list_item_vertical_padding">24dp</dimen>
+
+  <dimen name="fab_size">72dp</dimen>
+  <dimen name="fab_size_inset">56dp</dimen>
+  <dimen name="fab_radius">36dp</dimen>
+  <dimen name="fab_radius_inset">28dp</dimen>
+  <dimen name="fab_margin">32dp</dimen>
+  <dimen name="fab_margin_inset">40dp</dimen>
+
+  <dimen name="fab_elevation">16dp</dimen>
+  <dimen name="fab_elevation_2">32dp</dimen>
+  <dimen name="fab_pressed_elevation">8dp</dimen>
+
+  <dimen name="filter_layout_padding">32dp</dimen>
+  <dimen name="sheet_peek_height">340dp</dimen>
+  <dimen name="tabs_height">64dp</dimen>
+  <dimen name="tab_item_width">110dp</dimen>
+  <dimen name="thumb_size">40dp</dimen>
+
+  <dimen name="bottom_bar_icon_padding">24dp</dimen>
+  <dimen name="bottom_bar_height">@dimen/fab_size</dimen>
 
 </resources>
