Form is working and is adding new item do adapter. Should add animation to new item that joined the list

--- a/LOOPUIUX/app/src/main/res/layout/fragment_home.xml
+++ b/LOOPUIUX/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
       app:layout_constraintTop_toTopOf="parent"
       tools:listitem="@layout/list_item" />
 
-  <pt.rfernandes.loopuiux.ui.home.new_post.NewPostMotionLayout
+  <pt.rfernandes.loopuiux.ui.home.new_post.AddEntryMotionLayout
       android:id="@+id/add_entry_motion_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
