--- a/LOOPUIUX/app/src/main/res/layout/new_entry_upload_motion_layout.xml
+++ b/LOOPUIUX/app/src/main/res/layout/new_entry_upload_motion_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/new_entry_upload_motion_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/new_entry_upload_motion_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="visible"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     app:layoutDescription="@xml/new_entry_upload_motion_layout_scene">
 
     <TextView
@@ -17,78 +19,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
+    <ImageButton
+        android:id="@+id/imageButtonRemoveImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/chevron_background"
+        android:padding="8dp"
+        android:scaleX="0.7"
+        android:scaleY="0.7"
+        android:src="@drawable/ic_close"
+        android:visibility="gone"
+        android:alpha="0"/>
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/cardViewImageEntry"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:cardCornerRadius="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView">
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        fresco:placeholderImage="@mipmap/loop_logo"
+        app:roundedCornerRadius="10dp"/>
 
-        <ImageView
-            android:id="@+id/imageViewEntry"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:maxHeight="150dp"
-            android:scaleType="centerCrop" />
-
-    </androidx.cardview.widget.CardView>
-
-    <Button
-        android:id="@+id/buttonURL"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_url"
-        android:text="@string/url"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/buttonUpload"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
     <Button
         android:id="@+id/buttonUpload"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:drawableStart="@drawable/ic_upload"
         android:text="@string/upload"
-        app:layout_constraintEnd_toStartOf="@+id/buttonURL"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutURL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="1dp"
-        android:textColorHint="@color/black"
-        android:visibility="gone"
-        app:boxBackgroundColor="@color/dirty_white"
-        app:boxStrokeColor="@color/red_700"
-        app:counterOverflowTextColor="@color/red_700"
-        app:counterTextColor="@color/dirty_white"
-        app:hintTextColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/buttonURL"
-        app:layout_constraintStart_toStartOf="@+id/buttonUpload"
-        app:layout_constraintTop_toBottomOf="@+id/buttonURL">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/url"
-            android:maxLines="1"
-            android:textColor="@color/black"
-            android:textColorHighlight="@color/red_700"
-            android:inputType="textWebEditText|text"
-            android:imeOptions="actionSearch"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/cardViewImageEntry" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
