--- a/LOOPUIUX/app/src/main/res/layout/new_post_motion_layout.xml
+++ b/LOOPUIUX/app/src/main/res/layout/new_post_motion_layout.xml
@@ -85,6 +85,7 @@
                     android:layout_height="wrap_content" />
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayoutTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColorHint="@color/black"
@@ -109,6 +110,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/textInputLayoutContent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
