--- a/LOOPUIUX/app/src/main/res/xml/new_entry_upload_motion_layout_scene.xml
+++ b/LOOPUIUX/app/src/main/res/xml/new_entry_upload_motion_layout_scene.xml
@@ -6,18 +6,18 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="1000">
+        motion:duration="800">
        <KeyFrameSet>
        </KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/cardView2"
+            android:id="@+id/cardViewImageEntry"
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="invisible"
+            android:visibility="visible"
             motion:layout_constraintTop_toBottomOf="@id/textView"
             motion:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" />
@@ -25,51 +25,44 @@
 
     <ConstraintSet android:id="@+id/upload">
         <Constraint
-            android:id="@+id/cardView2"
+            android:id="@+id/cardViewImageEntry"
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="250dp"
             android:visibility="visible"
             motion:layout_constraintTop_toBottomOf="@id/textView"
             motion:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" />
-    </ConstraintSet>
-
-    <ConstraintSet android:id="@+id/url">
         <Constraint
-            android:id="@+id/textInputLayoutURL"
-            motion:layout_constraintEnd_toEndOf="@+id/buttonURL"
-            android:layout_width="match_parent"
+            android:id="@+id/imageButtonRemoveImage"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="visible"
-            android:layout_marginEnd="1dp"
-            motion:layout_constraintTop_toBottomOf="@+id/buttonURL"
-            motion:layout_constraintStart_toStartOf="@+id/buttonUpload"
-            android:layout_marginTop="8dp" />
+            android:alpha="1"
+            motion:layout_constraintEnd_toEndOf="@+id/cardViewImageEntry"
+            motion:layout_constraintTop_toTopOf="@+id/cardViewImageEntry"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:elevation="16dp"/>
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
-        <Constraint
-            android:id="@+id/textInputLayoutURL"
-            motion:layout_constraintEnd_toEndOf="@+id/buttonURL"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_marginEnd="1dp"
-            motion:layout_constraintTop_toBottomOf="@+id/buttonURL"
-            motion:layout_constraintStart_toStartOf="@+id/buttonUpload"
-            android:layout_marginTop="8dp" />
     </ConstraintSet>
     <Transition
+        android:id="@+id/start_to_upload"
         motion:constraintSetStart="@+id/start"
-        motion:constraintSetEnd="@+id/upload" />
+        motion:constraintSetEnd="@+id/upload"
+        motion:duration="700"/>
     <Transition
-        motion:constraintSetStart="@+id/start"
-        motion:constraintSetEnd="@+id/url" />
+        android:id="@+id/upload_to_start"
+        motion:constraintSetStart="@+id/upload"
+        motion:constraintSetEnd="@+id/start"
+        motion:duration="700"/>
     <Transition
-        motion:constraintSetStart="@+id/url"
-        motion:constraintSetEnd="@+id/upload" />
-    <Transition
-        motion:constraintSetStart="@+id/url"
+        android:id="@+id/upload_to_end"
+        motion:constraintSetStart="@+id/upload"
         motion:constraintSetEnd="@+id/end" />
+
 </MotionScene>
