--- a/LOOPUIUX/app/src/main/res/layout/list_item.xml
+++ b/LOOPUIUX/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
-    app:layoutDescription="@xml/fragment_home_scene">
+    app:layoutDescription="@xml/list_item_motion_layout">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -30,14 +30,14 @@
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/cardView">
 
-        <ImageView
+        <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/imageViewContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@mipmap/city"
+            app:placeholderImage="@mipmap/loop_logo"
             app:layout_constraintEnd_toEndOf="@+id/cardView"
             app:layout_constraintStart_toStartOf="@+id/cardView"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,7 +62,7 @@
         android:layout_marginEnd="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="TextView"
+        android:text="title"
         android:textColor="@color/dirty_white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -74,11 +74,11 @@
     <TextView
         android:id="@+id/textViewContent"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="38dp"
         android:layout_marginTop="16dp"
         android:ellipsize="end"
-        android:maxLines="2"
-        android:text="Praesent vel pulvinar mi. Vivamus non eleifend lorem. Phasellus vitae ligula tristique magna dapibus viverra id eu justo. Proin varius sem in pellentesque efficitur. Ut dictum purus lorem, ac feugiat nisi egestas vitae. Nam ac mi non nibh luctus blandit eu a nisi. Aliquam dapibus elit lacus, et lacinia sapien viverra at. Mauris ullamcorper est risus, at posuere est convallis id."
+        android:paddingBottom="10dp"
+        android:text="@string/lorem_content"
         android:textColor="@color/dirty_white"
         app:layout_constraintEnd_toEndOf="@+id/textViewContentTitle"
         app:layout_constraintStart_toStartOf="@+id/textViewContentTitle"
@@ -93,8 +93,8 @@
         android:background="@drawable/chevron_background"
         android:src="@drawable/ic_chevron_right"
         android:tint="@color/red_700"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        app:layout_constraintTop_toTopOf="@+id/cardView" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
