--- a/LOOPUIUX/app/src/main/res/layout/list_item.xml
+++ b/LOOPUIUX/app/src/main/res/layout/list_item.xml
@@ -5,9 +5,34 @@
     android:id="@+id/motion_base"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
+
     app:layoutDescription="@xml/list_item_motion_layout">
+
+    <ImageButton
+        android:id="@+id/imageButtonDeleteEntry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:background="@android:color/transparent"
+        android:elevation="3dp"
+        android:tint="@color/dirty_white"
+        app:layout_constraintBottom_toBottomOf="@+id/cardViewDeleteButton"
+        app:layout_constraintStart_toStartOf="@+id/cardViewDeleteButton"
+        app:layout_constraintTop_toTopOf="@+id/cardViewDeleteButton"
+        app:srcCompat="@drawable/ic_trash" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewDeleteButton"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        app:cardBackgroundColor="@color/red_700"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView2">
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -17,7 +42,7 @@
         android:layout_marginRight="20dp"
         app:cardBackgroundColor="@color/dirty_white"
         app:cardCornerRadius="10dp"
-        app:cardElevation="0dp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,8 +51,10 @@
         android:id="@+id/imageView2"
         android:layout_width="0dp"
         android:layout_height="150dp"
+        android:layout_marginBottom="16dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="0dp"
+        app:cardElevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toTopOf="@+id/cardView">
@@ -37,10 +64,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            app:placeholderImage="@mipmap/loop_logo"
-            app:layout_constraintEnd_toEndOf="@+id/cardView"
-            app:layout_constraintStart_toStartOf="@+id/cardView"
-            app:layout_constraintTop_toTopOf="parent" />
+
+            app:placeholderImage="@mipmap/loop_logo" />
     </androidx.cardview.widget.CardView>
 
     <View
@@ -48,6 +73,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:alpha="0.7"
+        android:elevation="4dp"
         android:background="@drawable/shade_background"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
@@ -60,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:elevation="4dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="title"
@@ -74,10 +101,11 @@
     <TextView
         android:id="@+id/textViewContent"
         android:layout_width="0dp"
-        android:layout_height="38dp"
+        android:layout_height="55dp"
         android:layout_marginTop="16dp"
+        android:elevation="4dp"
         android:ellipsize="end"
-        android:paddingBottom="10dp"
+        android:paddingBottom="20dp"
         android:text="@string/lorem_content"
         android:textColor="@color/dirty_white"
         app:layout_constraintEnd_toEndOf="@+id/textViewContentTitle"
@@ -91,6 +119,7 @@
         android:layout_marginStart="8dp"
         android:alpha="1"
         android:background="@drawable/chevron_background"
+        android:elevation="4dp"
         android:src="@drawable/ic_chevron_right"
         android:tint="@color/red_700"
         app:layout_constraintBottom_toBottomOf="@+id/cardView"
