--- a/LOOPUIUX/app/src/main/res/xml/list_item_motion_layout.xml
+++ b/LOOPUIUX/app/src/main/res/xml/list_item_motion_layout.xml
@@ -6,8 +6,7 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="500">
-    </Transition>
+        motion:duration="500"></Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
@@ -19,15 +18,12 @@
             android:alpha="0.7"
             motion:layout_constraintTop_toTopOf="@+id/imageView2"
             motion:layout_constraintStart_toStartOf="@+id/imageView2">
-            <CustomAttribute
-                motion:attributeName="alpha"
-                motion:customFloatValue="0.7" />
         </Constraint>
         <Constraint
             android:id="@+id/textViewContent"
             motion:layout_constraintEnd_toEndOf="@+id/textViewContentTitle"
             android:layout_width="0dp"
-            android:layout_height="58dp"
+            android:layout_height="55dp"
             motion:layout_constraintStart_toStartOf="@+id/textViewContentTitle"
             motion:layout_constraintTop_toBottomOf="@+id/textViewContentTitle"
             android:layout_marginTop="16dp"
@@ -60,6 +56,15 @@
                 motion:attributeName="textColor"
                 motion:customColorValue="@color/dirty_white" />
         </Constraint>
+        <Constraint
+            motion:layout_constraintEnd_toEndOf="@+id/cardView"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            motion:layout_constraintTop_toTopOf="@+id/cardView"
+            motion:layout_constraintStart_toStartOf="@+id/cardView"
+            android:id="@+id/imageView2"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="16dp" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -101,9 +106,7 @@
             android:alpha="0.7"
             motion:layout_constraintTop_toTopOf="@+id/imageView2"
             motion:layout_constraintStart_toStartOf="@+id/imageView2">
-            <CustomAttribute
-                motion:attributeName="alpha"
-                motion:customFloatValue="0" />
+
         </Constraint>
         <Constraint
             android:layout_height="wrap_content"
@@ -118,7 +121,8 @@
             motion:transitionEasing="cubic(0.72,0.27,1,0)"
             motion:pathMotionArc="startVertical"
             motion:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp">
+            android:layout_marginBottom="16dp"
+            android:visibility="visible">
             <CustomAttribute
                 motion:attributeName="textColor"
                 motion:customColorValue="@color/black" />
@@ -132,10 +136,49 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             motion:layout_constraintTop_toBottomOf="@+id/imageView2"
-            motion:layout_constraintStart_toStartOf="@+id/cardView" >
+            motion:layout_constraintStart_toStartOf="@+id/cardView"
+            android:visibility="visible">
             <CustomAttribute
                 motion:attributeName="textColor"
                 motion:customColorValue="@color/black" />
         </Constraint>
     </ConstraintSet>
+    <ConstraintSet android:id="@+id/delete_entry" >
+        <Constraint
+            android:id="@+id/cardViewDeleteButton"
+            motion:layout_constraintEnd_toEndOf="@id/cardView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            motion:layout_constraintBottom_toBottomOf="@+id/cardView"
+            android:layout_marginStart="20dp"
+            motion:layout_constraintTop_toTopOf="@+id/cardView"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:visibility="visible" />
+        <Constraint
+            android:id="@+id/cardView"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:layout_constraintStart_toEndOf="@+id/imageButtonDeleteEntry"
+            android:layout_marginStart="20dp" />
+    </ConstraintSet>
+
+    <Transition
+        motion:constraintSetStart="@+id/start"
+        motion:constraintSetEnd="@+id/delete_entry" >
+        <OnSwipe
+            motion:touchAnchorId="@+id/imageView2"
+            motion:dragDirection="dragRight"
+            motion:touchAnchorSide="middle" />
+    </Transition>
+    <Transition
+        motion:constraintSetStart="@+id/delete_entry"
+        motion:constraintSetEnd="@+id/start" >
+        <OnSwipe
+            motion:touchAnchorId="@+id/imageView2"
+            motion:dragDirection="dragLeft"
+            motion:touchAnchorSide="middle" />
+    </Transition>
+
 </MotionScene>
