--- a/LOOPUIUX/app/src/main/res/layout/list_item.xml
+++ b/LOOPUIUX/app/src/main/res/layout/list_item.xml
@@ -90,8 +90,7 @@
         android:maxLines="1"
         android:text="title"
         android:textColor="@color/dirty_white"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        style="@style/title_style"
         app:layout_constraintBottom_toTopOf="@+id/imageButtonChevronBackground"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toEndOf="@+id/imageButtonChevronBackground"
@@ -101,10 +100,10 @@
         android:id="@+id/textViewContent"
         android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="0dp"
         android:elevation="4dp"
         android:ellipsize="end"
-        android:paddingBottom="20dp"
+        style="@style/content_style"
         android:text="@string/lorem_content"
         android:textColor="@color/dirty_white"
         app:layout_constraintEnd_toEndOf="@+id/textViewContentTitle"
@@ -117,6 +116,7 @@
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:alpha="1"
+        style="@style/content_style"
         android:background="@drawable/chevron_background"
         android:elevation="6dp"
         android:src="@drawable/ic_chevron_right"
