--- a/LOOPUIUX/app/src/main/res/values/colors.xml
+++ b/LOOPUIUX/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
   <color name="black">#303841</color>
   <color name="black_op_05">#80303841</color>
   <color name="white">#FFFFFFFF</color>
-
+  <color name="secondary_variant">#97ABB3</color>
 
 
   <color name="colorPrimary">#18BDD6</color>
