--- a/LOOPUIUX/app/src/main/res/layout/fragment_home.xml
+++ b/LOOPUIUX/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeFragment"
-    android:background="#97ABB3">
+    android:background="@color/dark_gray">
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
