--- a/LOOPUIUX/app/src/main/res/values/themes.xml
+++ b/LOOPUIUX/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
   <!-- Base application theme. -->
-  <style name="Theme.LOOPUIUX" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+  <style name="Theme.LOOPUIUX" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <!-- Primary brand color. -->
     <item name="colorPrimary">@color/red_500</item>
     <item name="colorPrimaryVariant">@color/red_700</item>
@@ -33,5 +33,7 @@
     <item name="fontFamily">@font/koho_regular</item>
     <item name="android:textSize">18sp</item>
   </style>
+
+  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
 </resources>
