--- a/LOOPUIUX/app/src/main/res/layout/new_entry_upload_motion_layout.xml
+++ b/LOOPUIUX/app/src/main/res/layout/new_entry_upload_motion_layout.xml
@@ -42,6 +42,7 @@
         android:layout_marginTop="8dp"
         android:visibility="visible"
         app:cardCornerRadius="8dp"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
