--- a/LOOPUIUX/app/src/main/res/xml/new_entry_upload_motion_layout_scene.xml
+++ b/LOOPUIUX/app/src/main/res/xml/new_entry_upload_motion_layout_scene.xml
@@ -17,7 +17,7 @@
             motion:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:visibility="visible"
+            android:visibility="gone"
             motion:layout_constraintTop_toBottomOf="@id/textView"
             motion:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" />
@@ -49,6 +49,15 @@
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
+        <Constraint
+            android:id="@+id/cardViewImageEntry"
+            motion:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            motion:layout_constraintTop_toBottomOf="@id/textView"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp" />
     </ConstraintSet>
     <Transition
         android:id="@+id/start_to_upload"
