--- a/LOOPUIUX/app/src/main/res/layout/list_item.xml
+++ b/LOOPUIUX/app/src/main/res/layout/list_item.xml
@@ -99,11 +99,12 @@
     <TextView
         android:id="@+id/textViewContent"
         android:layout_width="0dp"
-        android:layout_height="55dp"
+        android:layout_height="75dp"
         android:layout_marginTop="0dp"
         android:elevation="4dp"
         android:ellipsize="end"
         style="@style/content_style"
+        android:paddingBottom="20dp"
         android:text="@string/lorem_content"
         android:textColor="@color/dirty_white"
         app:layout_constraintEnd_toEndOf="@+id/textViewContentTitle"
